--- a/notebooks/WPFields.ipynb
+++ b/notebooks/WPFields.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -78,34 +81,6 @@
     "                    plans[i.get(\"id\")] = i.get(\"name\")\n",
     "        return plans"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "{'status': 1,\n 'data': [{'id': '71',\n   'education_group_id': '29',\n   'name': 'Правовое обеспечение национальной безопасности',\n   'code': '01'},\n  {'id': '72',\n   'education_group_id': '29',\n   'name': 'Правоохранительная деятельность',\n   'code': '02'},\n  {'id': '97',\n   'education_group_id': '29',\n   'name': 'Юриспруденция',\n   'code': '01'},\n  {'id': '98',\n   'education_group_id': '29',\n   'name': 'Обеспечение законности и правопорядка',\n   'code': '02'}]}"
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "payload = {\"token\": ApeksAPI.TOKEN, \"table\": \"plan_education_specialties\"}\n",
-    "request = requests.get(\n",
-    "    ApeksAPI.URL + \"/api/call/system-database/get\", params=payload\n",
-    ")\n",
-    "\n",
-    "request.json()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
   }
  ],
  "metadata": {
