--- a/notebooks/app.ipynb
+++ b/notebooks/app.ipynb
@@ -17,13 +17,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "id": "stunning-brooklyn",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from app.plans.models import EducationPlan\n",
+    "\n",
     "plan = EducationPlan(133)\n",
-    "matrix = CompMatrix('40.03.02 Обеспечение законности и правопорядка (Ответы).xlsx')"
+    "# matrix = CompMatrix('40.03.02 Обеспечение законности и правопорядка (Ответы).xlsx')"
    ]
   },
   {
@@ -657,10 +659,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "id": "prescription-action",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[0;32m/var/folders/d5/4nwn2rys5sz573f88fj_4vfc0000gn/T/ipykernel_9317/2701970847.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[0;31m# Загрузка Компетенций из файла\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      2\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 3\u001B[0;31m \u001B[0mdf\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mpd\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mDataFrame\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mpd\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mread_excel\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m'40-03-02-comp.xlsx'\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mengine\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;34m'openpyxl'\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      4\u001B[0m \u001B[0;31m# Normalize DataFrame\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      5\u001B[0m \u001B[0mreplace_dict\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0;34m{\u001B[0m\u001B[0;34m'  '\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m' '\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m'–'\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m'-'\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m'. - '\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m' - '\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m'K'\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m'К'\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m'O'\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m'О'\u001B[0m\u001B[0;34m}\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Загрузка Компетенций из файла\n",
     "\n",
@@ -679,6 +693,48 @@
     "    left_node += 2\n",
     "    right_node += 2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "from openpyxl import load_workbook\n",
+    "\n",
+    "# Загрузка Компетенций из файла\n",
+    "\n",
+    "wb = load_workbook('comp_load_temp.xlsx')\n",
+    "ws = wb.active\n",
+    "\n",
+    "# Normalize Data\n",
+    "replace_dict = {'  ':' ', '–':'-', '. - ':' - ', 'K':'К', 'O':'О'}\n",
+    "for key, val in replace_dict.items():\n",
+    "    for r in range(1, ws.max_row + 1):\n",
+    "        for c in range(1, 2):\n",
+    "            s = str(ws.cell(r, c).value)\n",
+    "            ws.cell(r, c).value = s.replace(key, val)\n",
+    "\n",
+    "def iter_rows(ws):\n",
+    "    for row in ws.iter_rows():\n",
+    "        yield [cell.value for cell in row]\n",
+    "comps = list(iter_rows(ws))\n",
+    "del comps[0]\n",
+    "\n",
+    "left_node, right_node  = 1, 2\n",
+    "\n",
+    "for comp in comps:\n",
+    "    code = comp[0]\n",
+    "    description = comp[1]\n",
+    "    plan.load_comp(code, description, left_node, right_node)\n",
+    "    left_node += 2\n",
+    "    right_node += 2"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
