--- a/notebooks/xlsx.ipynb
+++ b/notebooks/xlsx.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 83,
    "outputs": [],
    "source": [
     "from openpyxl import load_workbook\n",
@@ -67,26 +67,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "outputs": [],
-   "source": [
-    "replace_dict = {'  ':' ', '–':'-', '. - ':' - ', 'K':'К', 'O':'О'}\n",
-    "\n",
-    "for key, val in replace_dict.items():\n",
-    "    for r in range(1, ws.max_row + 1):\n",
-    "        for c in range(1, 2):\n",
-    "            s = str(ws.cell(r, c).value)\n",
-    "            ws.cell(r, c).value = s.replace(key, val)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
    "execution_count": 69,
    "outputs": [
     {
@@ -115,19 +95,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 86,
    "outputs": [
     {
      "data": {
-      "text/plain": "'Код'"
+      "text/plain": "'Code'"
      },
-     "execution_count": 36,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ws.cell(row=1, column=1).value"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "outputs": [],
+   "source": [
+    "ws.cell(row=1, column=1).value = 'Code'"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "outputs": [],
+   "source": [
+    "from app.main.func import db_filter_req\n",
+    "\n",
+    "wp_fields = db_filter_req(\n",
+    "                    \"mm_work_programs_data\", \"work_program_id\", 3025)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "outputs": [],
+   "source": [
+    "from app.library.models import LibraryPlan\n",
+    "\n",
+    "plan = LibraryPlan(133)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "outputs": [],
+   "source": [
+    "a = plan.work_programs"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'3228': 'Делопроизводство и режим секретности в органах внутренних дел',\n '3229': 'Основы управления в органах внутренних дел',\n '3230': 'Обеспечение прав человека в деятельности органов внутренних дел',\n '3233': 'Криминология'}"
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "if 'Основы управления в органах внутренних дел' in a.values():\n",
+    "    print('1')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "outputs": [],
+   "source": [
+    "from app.library.func import load_bibl\n",
+    "\n",
+    "load_bibl('3229', '1', 'Тест')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'status': 1, 'data': 1}"
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from config import ApeksAPI\n",
+    "work_program_id = 3229\n",
+    "field_id = 3\n",
+    "load_data = 'TEST'\n",
+    "\n",
+    "params = {\"token\": ApeksAPI.TOKEN}\n",
+    "data = {\n",
+    "    \"table\": \"mm_work_programs_data\",\n",
+    "    \"filter[work_program_id]\": work_program_id,\n",
+    "    \"filter[field_id]\": field_id,\n",
+    "    \"fields[data]\": load_data,\n",
+    "}\n",
+    "resp = requests.post(ApeksAPI.URL + \"/api/call/system-database/edit\", params=params, data=data)\n",
+    "resp.json()"
    ],
    "metadata": {
     "collapsed": false,
