--- a/notebooks/app.ipynb
+++ b/notebooks/app.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "stunning-brooklyn",
    "metadata": {},
    "outputs": [],
@@ -161,101 +161,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "outputs": [],
-   "source": [
-    "from openpyxl.utils import get_column_letter\n",
-    "from config import FlaskConfig\n",
-    "from openpyxl import Workbook\n",
-    "from openpyxl.styles import PatternFill, Border, Side, Alignment, Protection, Font, NamedStyle\n",
-    "from app.main.func import db_filter_req, db_request\n",
-    "\n",
-    "education_plan_id = 41\n",
-    "plan = CompPlan(education_plan_id)\n",
-    "\n",
-    "disc_list = db_request(\"plan_disciplines\")\n",
-    "plan_data = db_filter_req(\"plan_curriculum_disciplines\", \"education_plan_id\", education_plan_id)\n",
-    "relations = plan.disciplines_comp()\n",
-    "\n",
-    "# Сортировка\n",
-    "plan_disc = {}\n",
-    "for disc in plan_data:\n",
-    "    plan_disc[int(disc['left_node'])] = {'id': disc['id'], 'code': disc['code'], 'discipline_id': disc['discipline_id'], 'level': disc['level']}\n",
-    "plan_comp = {}\n",
-    "for comp in plan.competencies:\n",
-    "    plan_comp[int(comp['left_node'])] = {'id': comp['id'], 'code': comp['code']}\n",
-    "\n",
-    "def disc_name(discipline_id):\n",
-    "    for discipline in disc_list:\n",
-    "        if discipline.get(\"id\") == discipline_id:\n",
-    "            return discipline[\"name\"]\n",
-    "\n",
-    "class ExcelStyle(object):\n",
-    "    ThinBorder = Side(style='thin', color=\"000000\")\n",
-    "    ThickBorder = Side(style='thick', color=\"000000\")\n",
-    "    Header = NamedStyle(name='header')\n",
-    "    Header.font = Font(name=\"Times New Roman\",\n",
-    "                      size=12,\n",
-    "                      bold=True,\n",
-    "                      vertAlign=None)\n",
-    "    Header.border = Border(left=ThinBorder, right=ThinBorder, top=ThinBorder, bottom=ThinBorder)\n",
-    "    Header.alignment = Alignment(wrap_text=True)\n",
-    "    Base = NamedStyle(name='base')\n",
-    "    Base.font = Font(name=\"Times New Roman\",\n",
-    "                      size=11,\n",
-    "                      vertAlign=None)\n",
-    "    Base.border = Border(left=ThinBorder, right=ThinBorder, top=ThinBorder, bottom=ThinBorder)\n",
-    "    Base.alignment = Alignment(wrap_text=True)\n",
-    "    GreyFill = PatternFill(start_color=\"CCCCCC\",\n",
-    "                           end_color=\"CCCCCC\",\n",
-    "                           fill_type = \"solid\")\n",
-    "\n",
-    "wb = Workbook()\n",
-    "ws = wb.active\n",
-    "ws.title = \"Матрица компетенций\"\n",
-    "\n",
-    "\n",
-    "ws.cell(1, 1).value = 'Код'\n",
-    "ws.cell(1, 1).style = ExcelStyle.Header\n",
-    "ws.column_dimensions[get_column_letter(1)].width = 14\n",
-    "ws.cell(1, 2).value = 'Название дисциплины'\n",
-    "ws.cell(1, 2).style = ExcelStyle.Header\n",
-    "ws.column_dimensions[get_column_letter(2)].width = 60\n",
-    "\n",
-    "row = 2\n",
-    "for disc in sorted(plan_disc):\n",
-    "    ws.cell(row, 1).value = plan_disc[disc]['code']\n",
-    "    ws.cell(row, 1).style = ExcelStyle.Base\n",
-    "    ws.cell(row, 2).value = disc_name(plan_disc[disc][\"discipline_id\"])\n",
-    "    ws.cell(row, 2).style = ExcelStyle.Base\n",
-    "    column = 3\n",
-    "    for comp in sorted(plan_comp):\n",
-    "        ws.cell(1, column).value = plan_comp[comp]['code']\n",
-    "        ws.cell(1, column).style = ExcelStyle.Header\n",
-    "        ws.cell(1, column).alignment = Alignment(text_rotation=90)\n",
-    "        ws.column_dimensions[get_column_letter(column)].width = 4\n",
-    "        ws.cell(row, column).style = ExcelStyle.Base\n",
-    "        ws.cell(row, column).alignment = Alignment(horizontal='center', vertical='center')\n",
-    "        if plan_disc[disc]['level'] != '3':\n",
-    "            ws.cell(row, 1).fill = ExcelStyle.GreyFill\n",
-    "            ws.cell(row, 2).fill = ExcelStyle.GreyFill\n",
-    "            ws.cell(row, column).fill = ExcelStyle.GreyFill\n",
-    "        for relation in relations:\n",
-    "            if plan_disc[disc]['id'] == relation['curriculum_discipline_id'] and plan_comp[comp]['id'] == relation['competency_id']:\n",
-    "                ws.cell(row, column).value = '+'\n",
-    "        column += 1\n",
-    "    row += 1\n",
-    "wb.save(FlaskConfig.EXPORT_FILE_DIR + 'test.xlsx')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
    "execution_count": 31,
    "outputs": [],
    "source": [
@@ -295,12 +200,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "outputs": [],
    "source": [
-    "new_plan = {}\n",
-    "for disc in plan_disc:\n",
-    "    new_plan[int(disc['left_node'])] = {'id': disc['id'], 'code': disc['code'], 'discipline_id': disc['discipline_id'], 'level': disc['level']}"
+    "from app.main.func import xlsx_iter_rows\n",
+    "from openpyxl import load_workbook\n",
+    "\n",
+    "plan = CompPlan(133)\n",
+    "\n",
+    "wb = load_workbook('Матрица - ПЛАН для тестирования.xlsx')\n",
+    "ws = wb.active\n",
+    "liblist = list(xlsx_iter_rows(ws))"
    ],
    "metadata": {
     "collapsed": false,
@@ -311,19 +221,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 55,
    "outputs": [
     {
      "data": {
-      "text/plain": "[1,\n 2,\n 3,\n 5,\n 7,\n 9,\n 11,\n 13,\n 15,\n 17,\n 19,\n 21,\n 23,\n 25,\n 27,\n 29,\n 31,\n 33,\n 35,\n 37,\n 39,\n 41,\n 43,\n 45,\n 47,\n 49,\n 51,\n 53,\n 55,\n 57,\n 59,\n 61,\n 63,\n 65,\n 67,\n 69,\n 71,\n 73,\n 75,\n 78,\n 79,\n 81,\n 83,\n 85,\n 87,\n 89,\n 91,\n 93,\n 95,\n 97,\n 99,\n 101,\n 103,\n 105,\n 107,\n 109,\n 111,\n 113,\n 115,\n 117,\n 120,\n 122,\n 123,\n 125,\n 128,\n 129,\n 131,\n 134,\n 135,\n 137,\n 140,\n 141,\n 143,\n 147,\n 148,\n 150,\n 153,\n 154,\n 157,\n 158]"
+      "text/plain": "[['Код', 'Название дисциплины', '11', '22'],\n ['Блок 1', 'Дисциплины (модули)', None, None],\n ['Б.1.О', 'Обязательная часть ', None, None],\n ['Б.1.О.34',\n  'Делопроизводство и режим секретности в органах внутренних дел',\n  '+',\n  None],\n ['Б.1.О.35', 'Основы управления в органах внутренних дел', None, None],\n ['Б.1.В.ЭД.3.02',\n  'Обеспечение прав человека в деятельности органов внутренних дел',\n  None,\n  '+'],\n ['Б.1.О.25', 'Криминология', None, None],\n ['Б.1.О.38', 'Административная деятельность полиции', '=+C7', None]]"
      },
-     "execution_count": 37,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sorted(new_plan)"
+    "liblist"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10463 4541\n",
+      "10465 4542\n",
+      "10466 4541\n",
+      "10466 4542\n"
+     ]
+    }
+   ],
+   "source": [
+    "load_data = {}\n",
+    "for disc in plan.disciplines:\n",
+    "    load_data[disc] = []\n",
+    "    for line in liblist:\n",
+    "        if plan.disciplines[disc][1] == line[1]:\n",
+    "            for i in range(2, len(line)):\n",
+    "                if str(line[i]) == \"+\":\n",
+    "                    load_data[disc].append(plan.get_comp_id_by_code(liblist[0][i]))\n",
+    "for data in load_data:\n",
+    "    if load_data.get(data):\n",
+    "        for comp in load_data.get(data):\n",
+    "            if comp is not None:\n",
+    "                print(data, comp)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "outputs": [],
+   "source": [
+    "report['Административная деятельность полиции'].append('TEST')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'Делопроизводство и режим секретности в органах внутренних дел': 'Нет в файле',\n 'Основы управления в органах внутренних дел': 'Нет в файле',\n 'Обеспечение прав человека в деятельности органов внутренних дел': 'Нет в файле',\n 'Криминология': 'Нет в файле',\n 'Административная деятельность полиции': ['TEST']}"
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "report"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n",
+      "22\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(2, len(liblist[0])):\n",
+    "    print(liblist[0][i])"
    ],
    "metadata": {
     "collapsed": false,
