--- a/notebooks/DB Examples.ipynb
+++ b/notebooks/DB Examples.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "[{'id': '3229',\n  'curriculum_discipline_id': '10464',\n  'name': 'Основы управления в органах внутренних дел',\n  'description': None,\n  'authors': '',\n  'reviewers_int': None,\n  'reviewers_ext': '',\n  'date_create': None,\n  'date_approval': '2016-11-11',\n  'date_department': '2021-12-14',\n  'document_department': '1111',\n  'date_methodical': '2021-11-13',\n  'document_methodical': '5',\n  'date_academic': '2021-11-13',\n  'document_academic': '8',\n  'status': None,\n  'user_id': '9',\n  'settings': '{\"printSettingsRange\":\"\"}'}]"
+      "text/plain": "[{'id': '3229',\n  'curriculum_discipline_id': '10464',\n  'name': 'Основы управления в органах внутренних дел',\n  'description': None,\n  'authors': '',\n  'reviewers_int': None,\n  'reviewers_ext': 'Test',\n  'date_create': None,\n  'date_approval': '2016-11-11',\n  'date_department': '2021-12-14',\n  'document_department': '1111',\n  'date_methodical': '2021-11-13',\n  'document_methodical': '5',\n  'date_academic': '2021-11-13',\n  'document_academic': '8',\n  'status': None,\n  'user_id': '9',\n  'settings': '{\"printSettingsRange\":\"\"}'}]"
      },
-     "execution_count": 1,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26,13 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 71,
    "outputs": [
     {
      "data": {
       "text/plain": "[{'id': '1906',\n  'work_program_id': '3229',\n  'topic_id': None,\n  'purposes': 'Цели',\n  'tasks': 'Задачи',\n  'place_in_structure': 'Место в структуре',\n  'knowledge': '',\n  'skills': '',\n  'abilities': '',\n  'ownerships': ''}]"
      },
-     "execution_count": 3,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,6 +91,183 @@
     "work_program_id = 3229\n",
     "data = db_filter_req(\"mm_work_programs_competencies_data\", \"work_program_id\", work_program_id)\n",
     "data"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from app.main.func import db_filter_req\n",
+    "from config import ApeksAPI\n",
+    "\n",
+    "\n",
+    "class WorkProgram:\n",
+    "    def __init__(self, curriculum_discipline_id):\n",
+    "        self.curriculum_discipline_id = curriculum_discipline_id\n",
+    "        self.mm_work_programs = db_filter_req(\"mm_work_programs\", \"curriculum_discipline_id\", curriculum_discipline_id)\n",
+    "        self.work_program_id = self.mm_work_programs[0]['id']\n",
+    "        self.name = self.mm_work_programs[0]['name']\n",
+    "        self.reviewers_ext = self.mm_work_programs[0]['reviewers_ext']\n",
+    "        self.date_approval = self.mm_work_programs[0]['date_approval']\n",
+    "        self.date_department = self.mm_work_programs[0]['date_department']  # Кафедра\n",
+    "        self.document_department = self.mm_work_programs[0]['document_department']\n",
+    "        self.date_methodical = self.mm_work_programs[0]['date_methodical']  # Метод совет\n",
+    "        self.document_methodical = self.mm_work_programs[0]['document_methodical']\n",
+    "        self.date_academic = self.mm_work_programs[0]['date_academic']  # Ученый совет\n",
+    "        self.document_academic = self.mm_work_programs[0]['document_academic']\n",
+    "\n",
+    "        self.mm_work_programs_items = {'name': 'name',\n",
+    "                                       'reviewers_ext': 'reviewers_ext',\n",
+    "                                       'date_approval': 'date_approval',\n",
+    "                                       'date_department': 'date_department',\n",
+    "                                       'document_department': 'document_department',\n",
+    "                                       'date_methodical': 'date_methodical',\n",
+    "                                       'document_methodical': 'document_methodical',\n",
+    "                                       'date_academic': 'date_academic',\n",
+    "                                       'document_academic': 'document_academic',\n",
+    "                                       }\n",
+    "        self.mm_sections_items = {'purposes': 'purposes',\n",
+    "                                  'tasks': 'tasks',\n",
+    "                                  'place_in_structure': 'place_in_structure',}\n",
+    "        self.mm_work_programs_data_items = {\n",
+    "            'authorprint': 29,  # Автор(ы) рабочей программы (для печати)\n",
+    "            'no_next_disc': 30,  # Пояснение к таблице с последующими дисциплинами (информация об отсутствии)\n",
+    "            'templan_info': 31,  # Примечание к тематическому плану\n",
+    "            'self_provision': 8,  # Обеспечение самостоятельной работы\n",
+    "            'test_criteria': 32,  # Критерии оценки для сдачи промежуточной аттестации в форме тестирования\n",
+    "            'course_works': 12,  # Тематика курсовых работ\n",
+    "            'practice': 10,  # Практикум\n",
+    "            'control_works': 13,  # Тематика контрольных работ\n",
+    "            'exam_form_desc': 33,  # Примерные оценочные средства для проведения промежуточной аттестации\n",
+    "            'task_works': 9,  # Задачи\n",
+    "            'tests': 19,  # Тесты\n",
+    "            'regulations': 16,  # Нормативные акты\n",
+    "            'library_main': 1,  # Основная литература\n",
+    "            'library_add': 2,  # Дополнительная литература\n",
+    "            'library_np': 3,  # Научная продукция\n",
+    "            'internet': 18,  # Ресурсы информационно-телекоммуникационной сети Интернет\n",
+    "            'software': 15,  # Программное обеспечение\n",
+    "            'ref_system': 17,  # Базы данных, информационно-справочные и поисковые системы\n",
+    "            'materials_base': 20,  # Описание материально-технической базы\n",
+    "        }\n",
+    "\n",
+    "    def get(self, parameter):\n",
+    "        if parameter in self.mm_work_programs_items:\n",
+    "            return self.mm_work_programs[0][self.mm_work_programs_items.get(parameter)]\n",
+    "        elif parameter in self.mm_sections_items:\n",
+    "            return db_filter_req(\"mm_sections\", \"work_program_id\", self.work_program_id)[-1][self.mm_sections_items.get(parameter)]\n",
+    "        elif parameter in self.mm_work_programs_data_items:\n",
+    "            try:\n",
+    "                params = {\n",
+    "                    \"token\": ApeksAPI.TOKEN,\n",
+    "                    \"table\": \"mm_work_programs_data\",\n",
+    "                    \"filter[work_program_id]\": self.work_program_id,\n",
+    "                    \"filter[field_id]\": str(self.mm_work_programs_data_items.get(parameter)),\n",
+    "                }\n",
+    "                return requests.get(\n",
+    "                    ApeksAPI.URL + \"/api/call/system-database/get\", params=params\n",
+    "                ).json()[\"data\"][-1]['data']\n",
+    "            except IndexError:\n",
+    "                return \"\"\n",
+    "\n",
+    "    def edit(self, parameter, load_data):\n",
+    "        if parameter in self.mm_work_programs_items:\n",
+    "            params = {\"token\": ApeksAPI.TOKEN}\n",
+    "            data = {\n",
+    "                \"table\": \"mm_work_programs\",\n",
+    "                \"filter[id]\": self.work_program_id,\n",
+    "                \"fields[\" + self.mm_work_programs_items.get(parameter) + \"]\": str(load_data),\n",
+    "            }\n",
+    "            requests.post(ApeksAPI.URL + \"/api/call/system-database/edit\", params=params, data=data)\n",
+    "            self.mm_work_programs = db_filter_req(\"mm_work_programs\", \"curriculum_discipline_id\", curriculum_discipline_id)\n",
+    "\n",
+    "        elif parameter in self.mm_sections_items:\n",
+    "            params = {\"token\": ApeksAPI.TOKEN}\n",
+    "            data = {\n",
+    "                \"table\": \"mm_sections\",\n",
+    "                \"filter[work_program_id]\": self.work_program_id,\n",
+    "                \"fields[\" + self.mm_sections_items.get(parameter) + \"]\": str(load_data),\n",
+    "            }\n",
+    "            r = requests.post(ApeksAPI.URL + \"/api/call/system-database/edit\", params=params, data=data)\n",
+    "            return r.json()\n",
+    "        elif parameter in self.mm_work_programs_data_items:\n",
+    "            params = {\"token\": ApeksAPI.TOKEN}\n",
+    "            data = {\n",
+    "                \"table\": \"mm_work_programs_data\",\n",
+    "                \"filter[work_program_id]\": self.work_program_id,\n",
+    "                \"filter[field_id]\": self.mm_work_programs_data_items.get(parameter),\n",
+    "                \"fields[data]\": str(load_data),\n",
+    "            }\n",
+    "            r = requests.post(ApeksAPI.URL + \"/api/call/system-database/edit\", params=params, data=data)\n",
+    "            return r.json()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "outputs": [],
+   "source": [
+    "wp = WorkProgram(4553)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'дать обучающимся знания в области истории и методологии социологической науки, ознакомить их с современными социологическими концепциями и течениями;\\r\\nсформировать у обучающихся научное социологическое представление об обществе как сложной социокультурной системе, о социальных проблемах современного российского общества и тенденциях его развития;\\r\\nвыработать уобучающихся понимание значения общественных факторов социализации личности, ее социальных ролей и причин девиантного поведения;\\r\\nспособствовать формированию у обучающихся понимания причин социальных конфликтов и способов их разрешения в интересах обеспечения общественной безопасности, а также навыков толерантного поведения в многосоставном полиэтничном обществе;\\r\\nпривить обучающимся элементарные навыки самостоятельного сбора и оценки первичной социологической информации, научного анализа общественных проблем, в том числе связанных с профессиональной деятельностью.'"
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wp.get('tasks')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'status': 1, 'data': 2}"
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wp.edit('templan_info', 'Семинарское занятие по теме №2 проводится с использованием активных и интерактивных форм обучения\\r\\nПрактическое занятие №3 реализуется в форме практической подготовки.')"
    ],
    "metadata": {
     "collapsed": false,
