--- a/notebooks/Load Report.ipynb
+++ b/notebooks/Load Report.ipynb
@@ -8,19 +8,17 @@
    },
    "outputs": [],
    "source": [
+    "from app.main.models import EducationStaff\n",
     "import requests\n",
     "from config import ApeksAPI\n",
     "from app.main.func import db_filter_req, db_request\n",
     "from datetime import date\n",
     "from calendar import monthrange\n",
     "\n",
-    "class LoadReport:\n",
+    "class LoadReport(EducationStaff):\n",
     "    def __init__(self, year, month, department_id):\n",
-    "        self.year = year\n",
-    "        self.month = month\n",
-    "        self.department_id = str(department_id)\n",
+    "        super().__init__(year, month, department_id)\n",
     "        self.lessons = self.get_lessons()\n",
-    "        self.state_staff_history = db_filter_req('state_staff_history', 'department_id', self.department_id)\n",
     "\n",
     "    def get_lessons(self):\n",
     "        \"\"\"List of lessons for selected month\"\"\"\n",
@@ -34,49 +32,7 @@
     "        }\n",
     "        resp = requests.get(\n",
     "            ApeksAPI.URL + \"/api/call/system-database/get\", params=params)\n",
-    "        return resp.json()['data']\n",
-    "\n",
-    "    def staff_list(self):\n",
-    "        \"\"\"List of department workers which was active on selected month\"\"\"\n",
-    "        staff_list = []\n",
-    "        state_staff_positions = db_request('state_staff_positions')\n",
-    "        exclude_list = {'12': \"инструктора произв. обучения\",\n",
-    "                        '13': \"начальник кабинета\",\n",
-    "                        '14': \"специалист по УМР\",\n",
-    "                        '15': \"зав. кабинетом\",}\n",
-    "\n",
-    "        for staff in self.state_staff_history:\n",
-    "            if staff.get('position_id') not in exclude_list:\n",
-    "                if staff.get('end_date') is not None:\n",
-    "                    if date.fromisoformat(staff.get('end_date')) > date(self.year, self.month, 1):\n",
-    "                        staff_list.append(staff)\n",
-    "                else:\n",
-    "                    if date.fromisoformat(staff.get('start_date')) <= date(self.year, self.month, monthrange(self.year, self.month)[1]):\n",
-    "                        staff_list.append(staff)\n",
-    "\n",
-    "        def staff_sort(staff_id):\n",
-    "            \"\"\"getting sorting code by position\"\"\"\n",
-    "            position_id = \"\"\n",
-    "            for sort_staff in staff_list:\n",
-    "                if sort_staff.get(\"staff_id\") == str(staff_id):\n",
-    "                    position_id = sort_staff.get(\"position_id\")\n",
-    "            for k in state_staff_positions:\n",
-    "                if k.get(\"id\") == position_id:\n",
-    "                    return k.get(\"sort\")\n",
-    "\n",
-    "        def staff_name(staff_id):\n",
-    "            \"\"\"getting staff name from DB\"\"\"\n",
-    "            resp = db_filter_req(\"state_staff\", \"id\", staff_id)\n",
-    "            return f'{resp[0].get(\"family_name\")} {resp[0].get(\"name\")[0]}.{resp[0].get(\"surname\")[0]}.'\n",
-    "\n",
-    "        sort_dict = {}\n",
-    "        for i in staff_list:\n",
-    "            sort_dict[i['staff_id']] = int(staff_sort(i['staff_id']))\n",
-    "        a = sorted(sort_dict.items(), key=lambda x: x[1], reverse=True)\n",
-    "        prepod_dict = {}\n",
-    "        for i in range(len(a)):\n",
-    "            prepod_dict[a[i][0]] = staff_name(a[i][0])\n",
-    "        return prepod_dict"
+    "        return resp.json()['data']\n"
    ]
   }
  ],
