--- a/notebooks/DB Examples.ipynb
+++ b/notebooks/DB Examples.ipynb
@@ -17,6 +17,7 @@
     }
    ],
    "source": [
+    "\n",
     "from app.main.func import db_filter_req\n",
     "\n",
     "curriculum_discipline_id = 10464\n",
@@ -419,6 +420,211 @@
    ],
    "source": [
     "wp.edit('templan_info', 'Семинарское занятие по теме №2 проводится с использованием активных и интерактивных форм обучения\\r\\nПрактическое занятие №3 реализуется в форме практической подготовки.')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "d = '11.12.2021'"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'2021-12-11'"
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datetime import date, datetime\n",
+    "d = datetime.strptime('11.12.2021', '%d.%m.%Y')\n",
+    "date.isoformat(d)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[]"
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from app.main.func import db_filter_req\n",
+    "db_filter_req('mm_sections', 'work_program_id', 3230)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'status': 1, 'data': 1}"
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from app.main.func import db_filter_req, plan_curriculum_disciplines\n",
+    "from config import ApeksAPI\n",
+    "from app.programs.func import plan_department_disciplines\n",
+    "\n",
+    "params = {\"token\": ApeksAPI.TOKEN}\n",
+    "data = {\n",
+    "    \"table\": \"mm_sections\",\n",
+    "    \"fields[work_program_id]\": 3230,\n",
+    "    \"fields[topic_id]\": None,\n",
+    "    \"fields[purposes]\": '',\n",
+    "    \"fields[tasks]\": '',\n",
+    "    \"fields[place_in_structure]\": '',\n",
+    "    \"fields[knowledge]\": '',\n",
+    "    \"fields[skills]\": '',\n",
+    "    \"fields[abilities]\": '',\n",
+    "    \"fields[ownerships]\": ''\n",
+    "}\n",
+    "r = requests.post(\n",
+    "    ApeksAPI.URL + \"/api/call/system-database/add\",\n",
+    "    params=params,\n",
+    "    data=data,\n",
+    ")\n",
+    "r.json()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'status': 1, 'data': 1}"
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "params = {\"token\": ApeksAPI.TOKEN}\n",
+    "data = {\n",
+    "    \"table\": \"mm_sections\",\n",
+    "    \"filter[id]\": '1908',\n",
+    "}\n",
+    "r = requests.post(\n",
+    "    ApeksAPI.URL + \"/api/call/system-database/delete\",\n",
+    "    params=params,\n",
+    "    data=data,\n",
+    ")\n",
+    "r.json()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mIndexError\u001B[0m                                Traceback (most recent call last)",
+      "\u001B[1;32m~\\AppData\\Local\\Temp/ipykernel_12760/930429381.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m data = db_filter_req(\n\u001B[0m\u001B[0;32m      2\u001B[0m     \u001B[1;34m\"mm_sections\"\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;34m\"work_program_id\"\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;36m3230\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      3\u001B[0m )[-1]['tasks']\n\u001B[0;32m      4\u001B[0m \u001B[1;32mif\u001B[0m \u001B[0mdata\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      5\u001B[0m     \u001B[1;32mTrue\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mIndexError\u001B[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "data = db_filter_req(\n",
+    "    \"mm_sections\", \"work_program_id\", 3230\n",
+    ")[-1]['tasks']\n",
+    "if data:\n",
+    "    True"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "date_department 2021-11-12\n",
+      "document_department 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "load_data = \"Дата заседания кафедры: 12.11.2021\\r\\nПротокол № 5\"\n",
+    "\n",
+    "param = 'date_department'\n",
+    "d = load_data.split(\"\\r\\n\")[0].replace(\"Дата заседания кафедры:\", \"\").replace(\" \", \"\")\n",
+    "d = datetime.strptime(d, '%d.%m.%Y')\n",
+    "data = date.isoformat(d)\n",
+    "print(param, data)\n",
+    "\n",
+    "param = 'document_department'\n",
+    "data = load_data.split(\"\\r\\n\")[1].replace(\"Протокол №\", \"\").replace(\" \", \"\")\n",
+    "print(param, data)"
    ],
    "metadata": {
     "collapsed": false,
