--- a/notebooks/WPFields.ipynb
+++ b/notebooks/WPFields.ipynb
@@ -81,6 +81,49 @@
     "                    plans[i.get(\"id\")] = i.get(\"name\")\n",
     "        return plans"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "from app.programs.models import WorkProgram\n",
+    "\n",
+    "wp = WorkProgram(10465)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mIndexError\u001B[0m                                Traceback (most recent call last)",
+      "\u001B[1;32m~\\AppData\\Local\\Temp/ipykernel_9232/3801109322.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[0mwp\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mget\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m'tasks'\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[1;32mD:\\PyCharm\\app\\programs\\models.py\u001B[0m in \u001B[0;36mget\u001B[1;34m(self, parameter)\u001B[0m\n\u001B[0;32m     80\u001B[0m             \u001B[1;32mreturn\u001B[0m \u001B[1;34mf\"Дата заседания кафедры: {date_department}\\r\\nПротокол № {document_department}\"\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     81\u001B[0m         \u001B[1;32melif\u001B[0m \u001B[0mparameter\u001B[0m \u001B[1;32min\u001B[0m \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mmm_sections_items\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 82\u001B[1;33m             return db_filter_req(\n\u001B[0m\u001B[0;32m     83\u001B[0m                 \u001B[1;34m\"mm_sections\"\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;34m\"work_program_id\"\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mwork_program_id\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     84\u001B[0m             )[-1][self.mm_sections_items.get(parameter)]\n",
+      "\u001B[1;31mIndexError\u001B[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "wp.get('tasks')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
