--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -7,7 +7,27 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from lxml import etree\n",
+    "\n",
+    "xml = '<cube color=\"blue\"><cube color=\"red\"><cube color=\"green\"></cube></cube><cube color=\"red\"></cube></cube>'\n",
+    "\n",
+    "\n",
+    "def xmlfunc(level, number):\n",
+    "    number += 1\n",
+    "    if len(level):\n",
+    "        for i in range(len(level)):\n",
+    "            res[level[i].get(\"color\")] += number\n",
+    "            if len(level[i]):\n",
+    "                xmlfunc(level[i], number)\n",
+    "\n",
+    "\n",
+    "res = {\"red\": 0, \"green\": 0, \"blue\": 0}\n",
+    "root = etree.fromstring(xml)\n",
+    "res[root.get(\"color\")] += 1\n",
+    "xmlfunc(root, 1)\n",
+    "print(res[\"red\"], res[\"green\"], res[\"blue\"])"
+   ]
   },
   {
    "cell_type": "code",
@@ -535,6 +555,29 @@
     "    i = 1\n",
     "    if row[i].internal_value() == None:\n",
     "        ws.delete_rows(row, 2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2 // 5"
    ],
    "metadata": {
     "collapsed": false,
