--- a/notebooks/Load Report.ipynb
+++ b/notebooks/Load Report.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -363,8 +363,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "outputs": [],
+   "execution_count": 2,
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "string index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mIndexError\u001B[0m                                Traceback (most recent call last)",
+      "\u001B[1;32m~\\AppData\\Local\\Temp/ipykernel_18764/1979605929.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[0mload\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mLoadData\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;36m2021\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;36m12\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[1;32m~\\AppData\\Local\\Temp/ipykernel_18764/245584842.py\u001B[0m in \u001B[0;36m__init__\u001B[1;34m(self, year, month)\u001B[0m\n\u001B[0;32m    142\u001B[0m         \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mmonth\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mmonth\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    143\u001B[0m         \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mdepartments\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mget_departments\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 144\u001B[1;33m         \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mprepod_dept_structure\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mprepod_dept_structure\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m    145\u001B[0m         \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mlesson_staff\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mlessons_staff\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    146\u001B[0m         \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mload_subgroups\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mload_subgroups\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m~\\AppData\\Local\\Temp/ipykernel_18764/245584842.py\u001B[0m in \u001B[0;36mprepod_dept_structure\u001B[1;34m(self)\u001B[0m\n\u001B[0;32m    154\u001B[0m         \u001B[1;34m\"\"\"Department Id for prepod in current month ( {staff_id:department_id} )\"\"\"\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    155\u001B[0m         \u001B[0mstructure\u001B[0m \u001B[1;33m=\u001B[0m \u001B[1;33m{\u001B[0m\u001B[1;33m}\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 156\u001B[1;33m         \u001B[0mstaff\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mEducationStaff\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0myear\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mmonth\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m    157\u001B[0m         \u001B[1;32mfor\u001B[0m \u001B[0md\u001B[0m \u001B[1;32min\u001B[0m \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mdepartments\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    158\u001B[0m             \u001B[0mstaff_list\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mstaff\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mstaff_list\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0md\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m~\\PycharmProjects\\apeks-vuz-extension\\app\\main\\models.py\u001B[0m in \u001B[0;36m__init__\u001B[1;34m(self, year, month)\u001B[0m\n\u001B[0;32m     34\u001B[0m             \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mend_month\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mmonth\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     35\u001B[0m         \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mstate_staff_history\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mdb_request\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m'state_staff_history'\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 36\u001B[1;33m         \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mstate_staff\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mget_state_staff\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     37\u001B[0m         \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mstate_staff_positions\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mdb_request\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m'state_staff_positions'\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     38\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m~\\PycharmProjects\\apeks-vuz-extension\\app\\main\\models.py\u001B[0m in \u001B[0;36mget_state_staff\u001B[1;34m(self)\u001B[0m\n\u001B[0;32m     41\u001B[0m         \u001B[0mresp\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mdb_request\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m'state_staff'\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     42\u001B[0m         \u001B[1;32mfor\u001B[0m \u001B[0mstaff\u001B[0m \u001B[1;32min\u001B[0m \u001B[0mresp\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 43\u001B[1;33m             \u001B[0mstaff_list\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mstaff\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mget\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m'id'\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m=\u001B[0m \u001B[1;34mf'{staff.get(\"family_name\")} {staff.get(\"name\")[0]}.{staff.get(\"surname\")[0]}.'\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     44\u001B[0m         \u001B[1;32mreturn\u001B[0m \u001B[0mstaff_list\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     45\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mIndexError\u001B[0m: string index out of range"
+     ]
+    }
+   ],
    "source": [
     "load = LoadData(2021, 12)"
    ],
@@ -404,6 +420,314 @@
     "    elif cont_type == 'final_att':\n",
     "        value = int(people_count) * final_kf\n",
     "        return 8 if value > 8 else value\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Алдошин А.В.\n",
+      "Баркалов С.Н.\n",
+      "Фомичев А.Ю.\n",
+      "Павлова Е.В.\n",
+      "Афонина Е.Г.\n",
+      "Давыдов М.В.\n",
+      "Капустина Е.Г.\n",
+      "Кочеткова Н.Д.\n",
+      "Кузминова Е.Ю.\n",
+      "Сидорова М.В.\n",
+      "Трофимов В.Е.\n",
+      "Зиборов О.В.\n",
+      "Кольжанов И.В.\n",
+      "Алексеева Л.А.\n",
+      "Беляева О.В.\n",
+      "Выходов А.А.\n",
+      "Гарина О.В.\n",
+      "Клевцов С.В.\n",
+      "Дудченко Л.В.\n",
+      "Трофимова Т.С.\n",
+      "Жиляева С.К.\n",
+      "Коробов А.А.\n",
+      "Кульчиков Д.Е.\n",
+      "Мельник С.В.\n",
+      "Селютина О.Г.\n",
+      "Федотова О.В.\n",
+      "Матросова Л.Д.\n",
+      "Линьков В.В.\n",
+      "Семенов Е.Ю.\n",
+      "Шумилин В.П.\n",
+      "Чаплыгина В.Н.\n",
+      "Тишков С.А.\n",
+      "Васюков В.Ф.\n",
+      "Колычева А.Н.\n",
+      "Морозова Н.В.\n",
+      "Сретенцев Д.Н.\n",
+      "Сретенцев А.Н.\n",
+      "Сезонова Т.В.\n",
+      "Сучков А.И.\n",
+      "Губенков А.О.\n",
+      "Дурнев А.И.\n",
+      "Гуняев Е.В.\n",
+      "Николаев С.А.\n",
+      "Савчук Н.А.\n",
+      "Тихонович М.И.\n",
+      "Алтунин А.Ю.\n",
+      "Иноземцев С.В.\n",
+      "Фроленков В.Н.\n",
+      "Хрыков И.С.\n",
+      "Дикова И.В.\n",
+      "Митряев И.С.\n",
+      "Флоря Д.Ф.\n",
+      "Савенков Ю.Н.\n",
+      "Мирошкин Э.А.\n",
+      "Белевский Р.А.\n",
+      "Екимцев С.В.\n",
+      "Кураков Д.В.\n",
+      "Лисицын А.Г.\n",
+      "Смирнов И.М.\n",
+      "Любимов Л.В.\n",
+      "Губенков О.Е.\n",
+      "Зубков С.В.\n",
+      "Минаев А.В.\n",
+      "Зейналов Ф.Н.\n",
+      "Амеличкин А.В.\n",
+      "Андреев П.Г.\n",
+      "Афонин В.В.\n",
+      "Былинин И.А.\n",
+      "Жбанова С.А.\n",
+      "Михалева И.С.\n",
+      "Сабинин А.А.\n",
+      "Жарков Д.А.\n",
+      "Афоничкин К.В.\n",
+      "Сидоров П.С.\n",
+      "Ротанов М.В.\n",
+      "Янчук О.Ф.\n",
+      "Сальников Е.В.\n",
+      "Гаврилин С.А.\n",
+      "Власов В.В.\n",
+      "Леонова И.А.\n",
+      "Бондарев А.А.\n",
+      "Смоляков А.И.\n",
+      "Барышников М.В.\n",
+      "Боева М.А.\n",
+      "Кондратьев А.А.\n",
+      "Мишина Ю.В.\n",
+      "Семионкина Н.Г.\n",
+      "Строева О.А.\n",
+      "Юшина К.А.\n",
+      "Подчерняев А.Н.\n",
+      "Баранчикова М.В.\n",
+      "Костина Л.Н.\n",
+      "Борисова С.Е.\n",
+      "Сорокин А.И.\n",
+      "Кузнецова И.И.\n",
+      "Семёнов В.Р.\n",
+      "Кузнецов Д.Ю.\n",
+      "Пимакова О.Г.\n",
+      "Перков А.А.\n",
+      "Горынина О.С.\n",
+      "Гришин А.В.\n",
+      "Семёнов Е.А.\n",
+      "Якубина Ю.П.\n",
+      "Ветрова О.А.\n",
+      "Гришина Е.Б.\n",
+      "Лукьянчикова С.А.\n",
+      "Герасимов И.В.\n",
+      "Кузнецов М.Б.\n",
+      "Моськин С.А.\n",
+      "Губанов Э.В.\n",
+      "Еремин Р.В.\n",
+      "Осипов Д.В.\n",
+      "Панферов Р.Г.\n",
+      "Подрезов И.Н.\n",
+      "Чупахина М.Ю.\n",
+      "Цыбаков Д.Л.\n",
+      "Астрахан В.И.\n",
+      "Кузьменков В.А.\n",
+      "Мартынова Н.А.\n",
+      "Анохина Л.И.\n",
+      "Базавлук Л.М.\n",
+      "Власов К.А.\n",
+      "Цыбакова О.В.\n",
+      "Шашкова В.Н.\n",
+      "Щербенко Л.Р.\n",
+      "Шалимова О.Н.\n",
+      "Гришанова О.А.\n",
+      "Семененко Л.Н.\n",
+      "Алешина Л.В.\n",
+      "Ноговицина Е.Н.\n",
+      "Зубцов Ю.Н.\n",
+      "Марковичева Е.В.\n",
+      "Махов С.Ю.\n",
+      "Романов О.Н.\n",
+      "Савина Н.Н.\n",
+      "Колесникова Л.В.\n",
+      "Ливенцев Д.Н.\n",
+      "Пахомов В.И.\n",
+      "Дорохина Т.Н.\n",
+      "Горбунова М.В.\n",
+      "Касьянов И.А.\n",
+      "Мараев В.Ю.\n",
+      "Васильев Я.Б.\n",
+      "Трубилина С.А.\n",
+      "Муравьев К.В.\n",
+      "Абакумова О.Б.\n",
+      "Калинин А.Н.\n",
+      "Ефремова О.М.\n",
+      "Вакансия - Мартынова Н.А.\n",
+      "Лобанов И.В.\n",
+      "Панюшкина  О.Н.\n",
+      "Бадиков Д.А.\n",
+      "Кожухов  М.В.\n",
+      "Архипов  А.С.\n",
+      "Вакансия 1 - Губенков  А.О.\n",
+      "Вакансия 2 - Губенков А.О.\n",
+      "Маркин А.Н.\n",
+      "Петращук С.М.\n",
+      "Кузнецов А.С.\n",
+      "Харыбин А.Ю.\n",
+      "Степанюк В.В.\n",
+      "Лимарева Е.С.\n",
+      "Калюжный Ю.Н.\n",
+      "Шепарнева А.И.\n",
+      "Ляхов П.В.\n",
+      "Рослякова В.Н.\n",
+      "Миняева Е.А.\n",
+      "Болохонцева Н.М.\n",
+      "Мишин Д.С.\n",
+      "Булыжкин А.В.\n",
+      "Клевцов В.В.\n",
+      "Бадиков Д.А.\n",
+      "Коновалов Н.А.\n",
+      "Гороховский О.А.\n",
+      "Мартынов В.А.\n",
+      "Грядунов В.М.\n",
+      "Проказин Д.Л.\n",
+      "Ляшенко Е.А.\n",
+      "Кириленко С.Н.\n",
+      "Зейналов Ф.Н.\n",
+      "Басатин А.Е.\n",
+      "Степанюк В.И.\n",
+      "Имашева Г.К.\n",
+      "Амосов М.Ф.\n",
+      "Поляков Э.А.\n",
+      "Марачинский Ю.Л.\n",
+      "Савилов М.Г.\n",
+      "Петухов Б.В.\n",
+      "Алексеева Л.А.\n",
+      "Приходько Н.Ю.\n",
+      "Мигущенко О.Н.\n",
+      "Мальцева О.А.\n",
+      "Вдовиченко В.В.\n",
+      "Морозова Н.В.\n",
+      "Синеоков В.П.\n",
+      "Абрамов С.С.\n",
+      "Кузнецов А.C.\n",
+      "Москалюк И.К.\n",
+      "Ветров С.М.\n",
+      "Губанов А.С.\n",
+      "Аленичева С.В.\n",
+      "Суровцев В.А.\n",
+      "Калашников А.Ф.\n",
+      "Макеева В.С.\n",
+      "Давыдов М.В.\n",
+      "Баранова О.А.\n",
+      "Трусова Е.А.\n",
+      "Хромов В.Н.\n",
+      "Семёнов В.Р.\n",
+      "Гревцева М.В.\n",
+      "Виноградова В.А.\n",
+      "Данилов Д.А.\n",
+      "Николюк В.В.\n",
+      "Синенко С.А.\n",
+      "Клименко В.А.\n",
+      "Григорьев А.Ю.\n",
+      "Кулинец Ю.Е.\n",
+      "Сальников С.П.\n",
+      "Киричёк Е.В.\n",
+      "Марковичева Е.В.\n",
+      "Якимец А.В.\n",
+      "Мараев В.Ю.\n",
+      "Клименко А.С.\n",
+      "Иванова Е.С.\n",
+      "Химичева О.В.\n",
+      "Ляшенко А.Е.\n",
+      "Антонова Ю.Н.\n",
+      "Шульдешова Н.В.\n",
+      "Семененко Л.П.\n",
+      "Коршунов А.Ю.\n",
+      "Ломовская О.И.\n",
+      "Куртина Л.В.\n",
+      "Елагин А.Г.\n",
+      "Дмитриев С.Н.\n",
+      "Капустянский В.Г.\n",
+      "Денисова А.Ю.\n",
+      "Фроленков В.Н.\n",
+      "Захарова Е.И.\n",
+      "Пашин Л.А.\n",
+      "Шестаков А.Л.\n",
+      "Сигалов К.Е.\n",
+      "Мельников А.В.\n",
+      "Ширабоков П.В.\n",
+      "Щепотина А.С.\n",
+      "Снурницына И.Б.\n",
+      "Токарев А.В.\n",
+      "Нечушкина К.А.\n",
+      "Подкосов А.И.\n",
+      "Клушина А.Н.\n",
+      "Щендригин Е.Н.\n",
+      "Цыбаков Д.Л.\n",
+      "Гапеев А.Г.\n",
+      "Клименко О.А.\n",
+      "Минаев А.В.\n",
+      "Борисова С.С.\n",
+      "Дмитровский А.Л.\n",
+      "Ивочкин Д.С.\n",
+      "Иванюшин А.С.\n",
+      "Зубков С.В.\n",
+      "Минаев А.В.\n",
+      "Мирошкин Э.А.\n",
+      "Андреева А.В.\n",
+      "Андреев А.Г.\n",
+      "Фомичев А.А.\n",
+      "Зайцева Н.Н.\n",
+      "Покотиленко Н.А.\n",
+      "Ахтанина Н.А.\n",
+      "Вакансия-Подчерняев А.Н.\n",
+      "Рудакова Ю.В.\n",
+      "вакансия - Зейналов Ф.Н.\n",
+      ". .. .\n",
+      "Микунов Д.С.\n",
+      ".. ..X.\n"
+     ]
+    }
+   ],
+   "source": [
+    "resp = db_request('state_staff')\n",
+    "\n",
+    "#print(resp)\n",
+    "\n",
+    "for staff in resp:\n",
+    "    family_name = staff.get(\"family_name\")\n",
+    "    family_name = family_name if family_name else 'X'\n",
+    "\n",
+    "    first_name = staff.get(\"name\")\n",
+    "    first_name = first_name[0] if first_name else 'X'\n",
+    "\n",
+    "    second_name = staff.get(\"surname\")\n",
+    "    second_name = second_name[0] if second_name else 'X'\n",
+    "\n",
+    "    print(f'{family_name} {first_name}.{second_name}.')"
    ],
    "metadata": {
     "collapsed": false,
